tried to fix popup overlapping map

--- a/web/src/components/donations-map/map-overlay.scss
+++ b/web/src/components/donations-map/map-overlay.scss
@@ -66,45 +66,18 @@
   background-position: center;
   transition: background 0.8s;
 }
+
 .ripple:hover {
-  background: #47a7f5 radial-gradient(circle, transparent 1%, #47a7f5 1%) center/15000%;
+  background: rgba(232, 237, 240, 0) radial-gradient(circle, transparent 1%, rgba(155, 162, 161, 0.11) 1%) center/15000%;
 }
 
 .ripple:active {
-  background-color: #6eb9f7;
   background-size: 100%;
   transition: background 0s;
 }
 
 .button {
-  background-color: #2196f3;
   color: inherit;
-  border: 0;
-  cursor: pointer;
-  margin: 0;
-  display: inline-flex;
-  outline: 0;
-  padding: 0;
-  position: relative;
-  align-items: center;
-  user-select: none;
-  border-radius: 0;
-  vertical-align: middle;
-  -moz-appearance: none;
-  justify-content: center;
-  text-decoration: none;
-  -webkit-appearance: none;
-  -webkit-tap-highlight-color: transparent;
-  width: 80%;
-}
-
-.MuiButton-contained {
-  color: rgba(0, 0, 0, 0.87);
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-}
-
-.MuiButton-root {
-  color: rgba(0, 0, 0, 0.87);
   padding: 6px 16px;
   font-size: 0.875rem;
   min-width: 64px;
@@ -115,4 +88,21 @@
   border-radius: 4px;
   letter-spacing: 0.02857em;
   text-transform: uppercase;
+  background: inherit;
+  border: 0;
+  cursor: pointer;
+  margin: 0;
+  display: inline-flex;
+  outline: 0;
+  position: relative;
+  align-items: center;
+  user-select: none;
+  vertical-align: middle;
+  -moz-appearance: none;
+  justify-content: center;
+  text-decoration: none;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  width: 80%;
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
